--- a/src/app/shared/component/note/note.component.html
+++ b/src/app/shared/component/note/note.component.html
@@ -13,15 +13,12 @@
 
 <div class="p-2">
   <p>user image,user</p>
-  <a href="#"><h2>article title </h2></a>
-  <p>Lorem ipsum dolor sit amet, pede a libero aenean phasellus, lectus metus sint ut risus, fusce vel in pellentesque.
-    Nisl rutrum etiam morbi consectetuer tempor magna, aenean nullam nunc id, neque vivamus interdum sociis nulla
-    scelerisque sem, dolor id wisi turpis magna aliquam magna. Risus accumsan hac eget etiam donec sed, senectus erat
-    mattis quam, tempor vel urna occaecat cras, metus urna augue nec at. Et morbi amet dui praesent, nec eu at, ligula
-    ipsum dui sollicitudin, quis nisl massa viverra ligula, mauris fermentum orci arcu enim fringilla. Arcu erat nulla
-    in
-    aenean lacinia ullamcorper, urna ante nam et sagittis, tristique vehicula nibh ipsum vivamus, proin proin. Porta
-    commodo nibh quis libero amet. Taciti dui, sapien consectetuer...</p>
+  <a href="#"><h2>王宝强要结婚啦？婚纱照曝光，新娘比马蓉漂亮100倍！</h2></a>
+  <p>王宝强自去年在微博发布离婚申明之后，整个娱乐圈都地震了一下，马蓉成千夫所指。然而事情都过去那么久了，宝宝现在也从阴影中走了出来，
+    并且重新找了女朋友。
+    其实宝宝的新娘正是温婉大气，比马蓉漂亮100倍熊乃瑾，网传两者恋爱即将结婚的消息，乐乐绝对双手称赞并送上祝福。熊乃瑾一直以清纯才女的形象示人，
+    有着四川妹子的娇小与玲珑，个子虽然不高，但长相甜美，面容姣好，且拥有精致的五官，纤小的脸型，和晶莹剔透的肌肤...
+  </p>
   <div>
     <md-chip-list class="float-left">
       <md-chip>java</md-chip>
