--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,7 +20,7 @@
   display: inline-block;
   padding: 0 11px 20px 6px;
   font-size: 16px;
-  color: #babdff;
+  color: #0f0b52;
 }
 
 .app-nav-css {
@@ -44,5 +44,5 @@
   width: 100%;
   z-index: 1000;
 }
-.material-icons.md-light { color: rgb(229, 231, 233);
+.material-icons.md-light { color: rgb(2, 5, 4);
 }
