--- a/src/app/user-info/user-info.component.html
+++ b/src/app/user-info/user-info.component.html
@@ -1,6 +1,6 @@
 <div [mdMenuTriggerFor]="menu"><img src="../../assets/img/user/default.jpg" alt="click" class="user-head-img">
-  <i class="material-icons" >keyboard_arrow_down</i>
-  {{name}}
+  <i class="material-icons" style="color: white" >keyboard_arrow_down</i>
+  <!--{{name}}-->
 </div>
 <md-menu #menu="mdMenu">
   <button md-menu-item>个人信息</button>
