注册界面验证信息

--- a/src/app/sign/sign-up/sign-up.component.html
+++ b/src/app/sign/sign-up/sign-up.component.html
@@ -1,24 +1,17 @@
 <div class="pl-4">
   <form [formGroup]="userForm">
     <md-input-container >
-      <input mdInput  placeholder="用户名" [(ngModel)]="user.name"
-             formControlName="name"
-             required >{{notUse}}
-      <md-hint *ngIf="!name.valid && name.touched" align="end">{{name.errors?.errMsg}}</md-hint>
-      <md-hint *ngIf="name.valid && name.touched" align="end">可以使用！</md-hint>
+      <input mdInput  placeholder="用户名" [(ngModel)]="user.name" formControlName="name" required >
+      <md-hint *ngIf="!name.valid && name.touched" align="end">{{name.errors.errMsg}}</md-hint>
     </md-input-container>
     <md-input-container class="example-full-width">
-      <input mdInput type="password" placeholder="密码" [(ngModel)]="user.password"
-             required formControlName="password">
+      <input mdInput type="password" placeholder="密码" [(ngModel)]="user.password" required formControlName="password">
+      <md-hint *ngIf="!password.valid && password.touched" align="end">{{password.errors.errMsg}}</md-hint>
     </md-input-container>
     <md-input-container class="example-full-width">
-      <input mdInput type="password" placeholder="再次输入" [(ngModel)]="checkPassword" minlength="6"
-             #checkPass
-             required formControlName="checkPassword">
-      <md-hint  align="head">{{checkPass.value.length}}/6</md-hint>
-      <md-hint *ngIf="!checkPassword.valid" align="end">2次输入不同！</md-hint>
+      <input mdInput type="password" placeholder="再次输入" #checkPass required formControlName="checkPassword">
+      <md-hint *ngIf="!checkPassword.valid && checkPassword.touched" align="end">{{checkPassword.errors.errMsg}}</md-hint>
     </md-input-container>
-
   </form>
   <div class="m-1">
     <button md-raised-button color="primary" [disabled]="!userForm.valid" (click)="submit()">注册</button>
